# emailibrium

./: .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .markdownlint.yaml  .prettierignore  .prettierrc  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  cliff.toml  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/helpers/: hook-handler.cjs  session.js
.github/: dependabot.yml
.github/scripts/: cargo-audit.sh  generate-changelog.sh
.github/workflows/: check-links.yml  ci.yml  docker.yml  release.yml
.husky/: pre-commit
backend/: Cargo.toml  Dockerfile  Makefile  audit-ignore  audit.toml  config.development.yaml  config.local.yaml.example  config.production.yaml  config.yaml  entrypoint.sh
backend/.cargo/: audit.toml  config.toml
backend/.claude/memory/: metrics.json  working-state.jsonl
backend/benches/: vector_benchmarks.rs
backend/docs/evaluation/: classification-accuracy.md  clustering-quality.md  performance.md  search-quality.md
backend/migrations/: 001_initial_schema.sql  002_ai_consent.sql  003_ai_metadata.sql  004_accounts.sql  004_fts5_search.sql  005_fts5_search.sql  005_per_user_learning.sql  006_ingestion_checkpoints.sql  008_cloud_api_audit.sql  008_gdpr_consent.sql  008_sync_queue.sql  009_ab_tests.sql  013_account_settings.sql  014_attachments.sql  015_sync_frequency_seconds.sql  016_soft_delete_trash_spam.sql  017_topic_clusters.sql  018_unsubscribe_headers.sql  019_fts5_add_from_name.sql  020_fts5_bm25_weights.sql  021_thread_key.sql  022_mcp_tool_audit.sql  023_app_settings.sql  024_cleanup_planning.sql  025_cleanup_audit_log.sql  20260324000000_rules.sql
backend/scripts/: rustc-wrapper.sh
backend/src/: lib.rs  main.rs  sync_lock.rs
backend/src/api/: accounts.rs  ai.rs  attachments.rs  backup.rs  clustering.rs  consent.rs  emails.rs  evaluation.rs  ingestion.rs  insights.rs  interactions.rs  learning.rs  mod.rs  provider_helpers.rs  rules.rs  unsubscribe.rs  vectors.rs  wipe.rs
backend/src/cache/: mod.rs
backend/src/cleanup/: audit.rs  mod.rs  telemetry.rs
backend/src/cleanup/api/: apply.rs  mod.rs  plan.rs  telemetry.rs
backend/src/cleanup/domain/: builder.rs  classifier.rs  mod.rs  operation.rs  plan.rs  ports.rs
backend/src/cleanup/orchestrator/: account_worker.rs  apply.rs  drift.rs  expander.rs  factory.rs  mod.rs  sse.rs
backend/src/cleanup/repository/: adapters.rs  job_repo.rs  mod.rs  plan_repo.rs
backend/src/config/: hot_reload.rs  mod.rs
backend/src/content/: attachment_extractor.rs  email_sanitizer.rs  html_extractor.rs  image_analyzer.rs  jobs.rs  link_analyzer.rs  mod.rs  tracking_detector.rs  types.rs
backend/src/db/: mod.rs
backend/src/email/: archive.rs  checkpoint.rs  conflict_resolution.rs  delta.rs  gmail.rs  health.rs  imap.rs  labels.rs  mod.rs  oauth.rs  offline_queue.rs  outlook.rs  poll_scheduler.rs  provider.rs  sync.rs  sync_scheduler.rs  types.rs  unsubscribe.rs
backend/src/events/: mod.rs
backend/src/mcp/: audit.rs  mod.rs  rate_limit.rs  server.rs
backend/src/mcp/tools/: email.rs  mod.rs
backend/src/middleware/: hsts.rs  log_scrub.rs  log_scrubbing.rs  mod.rs  rate_limit.rs  security_headers.rs
backend/src/rules/: engine.rs  json_parser.rs  mod.rs  parser.rs  rule_engine.rs  rule_processor.rs  rule_validator.rs  types.rs  validator.rs
backend/src/vectors/: audit.rs  backup.rs  categorizer.rs  chat.rs  chat_orchestrator.rs  clustering.rs  config.rs  consent.rs  embedding.rs  encryption.rs  error.rs  evaluation.rs  ewc.rs  extractive.rs  generative.rs  generative_builtin.rs  generative_router.rs  hdbscan.rs  inference_session.rs  ingestion.rs  insights.rs  interactions.rs  learning.rs  metrics.rs  mod.rs  model_catalog.rs  model_download.rs  model_integrity.rs  model_registry.rs  models.rs  privacy.rs  qdrant_store.rs  quantization.rs  query_parser.rs  rag.rs  reindex.rs  remote_wipe.rs  reranker.rs  ruvector_store.rs  search.rs  (+8 more)
backend/tests/: api_integration.rs  classification_evaluation.rs  clustering_evaluation.rs  domain_evaluation.rs  email_providers.rs  proptest_config.rs  proptest_content.rs  proptest_quantization.rs  proptest_search.rs  search_evaluation.rs  security_audit.rs
config/: app.yaml  classification.yaml  models-embedding.yaml  models-llm.yaml  prompts.yaml  tools.yaml  tuning.yaml
config/environments/: config.development.yaml
configs/: config.production.yaml
docs/: INCEPTION.md  architecture.md  configuration-reference.md  deployment-guide.md  maintainer-guide.md  oauth-setup-guide.md  releasing.md  setup-guide.md  test-plan-group-by-sender.md  user-guide.md  user-interface-overview.md
docs/ADRs/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md  ADR-013.md  ADR-014-rule-engine.md  ADR-015-offline-sync.md  ADR-016-security-middleware.md  ADR-017-gdpr-compliance.md  ADR-018-provider-folder-label-operations.md  ADR-019-email-body-rendering.md  ADR-020-email-attachment-management.md  ADR-021-addendum-rust-backend-llm.md  ADR-021-built-in-local-llm.md  ADR-021-clustering-performance.md  ADR-022-rag-pipeline.md  ADR-030-cleanup-dry-run.md
docs/DDDs/: DDD-000-context-map.md  DDD-001-email-intelligence.md  DDD-002-search.md  DDD-003-ingestion.md  DDD-004-learning.md  DDD-005-account-management.md  DDD-006-ai-providers-addendum-built-in-llm.md  DDD-006-ai-providers.md  DDD-007-rules-domain.md  DDD-008-addendum-cleanup-planning.md  DDD-008-email-operations.md  DDD-009-email-content-rendering.md  DDD-010-rag-domain.md
docs/adr/: ADR-028-mcp-tool-calling-chat.md  ADR-029-enhanced-rag-pipeline.md
docs/api/: openapi.yaml
docs/evaluation/: domain-adaptation.md  inbox-zero-protocol.md
docs/plan/: PRIMARY-IMPLEMENTATION-PLAN.md  (+13 more)
frontend/: .pnpm-approve-builds.json  Dockerfile  Makefile  lighthouserc.json  nginx.conf  package.json  pnpm-lock.yaml
scripts/: models.ts  release.sh  setup-ai.sh  setup-docker.sh  setup-prereqs.sh  setup-secrets.sh  setup-validate.sh  setup.sh
secrets/: .gitignore  README.md
(+295 files in other folders)
