[package]
name = "emailibrium"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Vector-native email intelligence platform"
license = "MIT"

[features]
default = ["vectors"]
vectors = []
test-vectors = ["vectors"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Auth & Security
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Content extraction
regex = "1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
figment = { version = "0.10", features = ["yaml", "env", "toml"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
tokio-test = "0.4"
axum-test = "16"

[[bench]]
name = "vector_benchmarks"
harness = false
