[package]
name = "emailibrium"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Vector-native email intelligence platform"
license = "MIT"

[features]
default = ["vectors"]
vectors = []
test-vectors = ["vectors"]
builtin-llm = ["dep:llama-cpp-2", "dep:hf-hub", "dep:encoding_rs"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Caching
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Auth & Security
argon2 = "0.5"
aes-gcm = "0.10"
sha2 = "0.11"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# URL encoding for OAuth
urlencoding = "2"

# Content extraction (ADR-006)
regex = "1"
ammonia = "4"
scraper = "0.26"
pdf-extract = "0.10"

# Background jobs (ADR-006)
apalis = { version = "1.0.0-rc.6" }
apalis-sql = "1.0.0-rc.6"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
figment = { version = "0.10", features = ["yaml", "env", "toml"] }
serde_yaml = "0.9"
fastembed = "5.13.0"

# Vector database (ADR-003: RuVector as primary)
ruvector-core = { path = "../ruvector/crates/ruvector-core", default-features = false, features = ["hnsw", "storage", "simd", "parallel"] }
ruvector-collections = { path = "../ruvector/crates/ruvector-collections" }
ruvector-gnn = { path = "../ruvector/crates/ruvector-gnn", default-features = false }

# Built-in local LLM (ADR-021 addendum, opt-in via --features builtin-llm)
llama-cpp-2 = { version = "0.1", optional = true }
hf-hub = { version = "0.4", optional = true }
encoding_rs = { version = "0.8", optional = true }
shellexpand = "3"
dirs = "6"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
tokio-test = "0.4"
axum-test = "16"
emailibrium = { path = ".", features = ["test-vectors"] }

[[bench]]
name = "vector_benchmarks"
harness = false
