[package]
name = "emailibrium"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Vector-native email intelligence platform"
license = "MIT"

[features]
default = ["vectors"]
vectors = []
test-vectors = ["vectors"]
builtin-llm = ["dep:llama-cpp-4", "dep:hf-hub", "dep:encoding_rs"]
proptest = ["dep:proptest"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("proptest"))'] }

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query", "macros"] }
tokio = { version = "1.51", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Caching
moka = { version = "0.12", features = ["future"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }

# Auth & Security
argon2 = "0.5"
aes-gcm = "0.10"
sha2 = "0.11"
zeroize = { version = "1", features = ["derive"] }
rand = "0.10.1"
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }

# IMAP
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.6", default-features = false, features = ["runtime-tokio"] }
mail-parser = "0.11"

# SMTP (outbound email for IMAP accounts)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"

# URL encoding for OAuth
urlencoding = "2"

# Content extraction (ADR-006)
regex = "1"
ammonia = "4"
scraper = "0.26"
pdf-extract = "0.10"

# Background jobs (ADR-006)
apalis = { version = "1.0.0-rc.6" }
apalis-sql = "1.0.0-rc.6"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Config
figment = { version = "0.10", features = ["yaml", "env", "toml"] }
serde_yaml = "0.9"
fastembed = "5.13.2"

# MCP (Model Context Protocol) server (ADR-028)
rmcp = { version = "1.6", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.2"

# Vector database (ADR-003: RuVector as primary)
ruvector-core = { path = "../ruvector/crates/ruvector-core", default-features = false, features = ["hnsw", "storage", "simd", "parallel"] }
ruvector-collections = { path = "../ruvector/crates/ruvector-collections" }
ruvector-gnn = { path = "../ruvector/crates/ruvector-gnn", default-features = false }

# Built-in local LLM (ADR-021 addendum, opt-in via --features builtin-llm)
llama-cpp-4 = { version = "0.2.43", optional = true }
hf-hub = { version = "0.5", optional = true }
encoding_rs = { version = "0.8", optional = true }
shellexpand = "3"
dirs = "6"
proptest = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tempfile = "3"
tokio-test = "0.4"
axum-test = "20"
emailibrium = { path = ".", features = ["test-vectors"] }

[[bench]]
name = "vector_benchmarks"
harness = false
